[package]
name = "alopt"
version = "0.1.0"
edition = "2024"
authors = ["Maxine Alexander <Max.Alexander3721@gmail.com>"]
readme = "README.md"
repository = "https://github.com/nucleus-labs/alopt"
license = "MIT"

[features]
tokio = ["dep:tokio"]

[dependencies]
ringbuffer = "0.15.0"
tokio = { version = "1.44.0", features = ["sync"], optional = true }
