[package]
name = "alopt"
version = "1.0.0"
edition = "2024"
description = "a Rust crate providing efficient synchronization primitives that integrate Option into their design."
authors = ["Maxine Alexander <Max.Alexander3721@gmail.com>"]
readme = "README.md"
repository = "https://github.com/nucleus-labs/alopt"
license = "MIT"
keywords = ["synchronization", "concurrency", "async", "multithreading", "lock"]
categories = ["concurrency", "asynchronous", "data-structures"]

[features]
# default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
ringbuffer = "0.15.0"
tokio = { version = "1.44.0", features = ["sync", "time"], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "std_rwlock"
harness = false

[[bench]]
name = "std_mutex"
harness = false

[[bench]]
name = "thread_worl"
harness = false

[[bench]]
name = "thread_wom"
harness = false

[[bench]]
name = "async_worl"
harness = false

[[bench]]
name = "async_wom"
harness = false
